--- a/.gitignore
+++ b/.gitignore
@@ -14,8 +14,10 @@ a.out
 *.map
 *.temp
 include/generated
+!sleep-lib/sleep_lib_tcsm_pad.bin
 tools/sfc_boot_checksum
 tools/ddr_params_creator
 tools/uart_baudrate_lut
 tools/mbr_creator
 tools/spl_params_fixer
+
