add support read efuse chip_id and user_id
Change-Id: I9bc31be6e38047816a8f8a424cd8a357bc4d88a7

--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,7 @@ tools/ddr_params_creator
 tools/uart_baudrate_lut
 tools/mbr_creator
 tools/spl_params_fixer
+tools/efuse_params_creator
 
 #
 # ignore tags files
