sleep-lib: merge sleep-lib source code
Change-Id: Iaba98458751e46b194410529c202bf15101c0c5c

--- a/.gitignore
+++ b/.gitignore
@@ -13,8 +13,8 @@ a.out
 *.elf
 *.map
 *.temp
+*.dump
 include/generated
-!sleep-lib/sleep_lib_tcsm_pad.bin
 tools/sfc_boot_checksum
 tools/ddr_params_creator
 tools/uart_baudrate_lut
