--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,7 @@ tools/uart_baudrate_lut
 tools/mbr_creator
 tools/spl_params_fixer
 tools/efuse_params_creator
+tools/sfc_timing_params_creator
 
 #
 # ignore tags files
