wdt: add wdt_params_creator tool
Change-Id: I3b2573e70af4e8e2abebc71a68da084ad2b7d574

--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,7 @@ tools/mbr_creator
 tools/spl_params_fixer
 tools/efuse_params_creator
 tools/sfc_timing_params_creator
+tools/wdt_params_creator
 
 #
 # ignore tags files
